[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/main_menu.gd" id="1_main_menu"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_main_menu")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.15, 0.15, 0.2, 1)

[node name="CenterContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -180.0
offset_right = 150.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 12

[node name="TitleLabel" type="Label" parent="CenterContainer"]
layout_mode = 2
text = "WarioParty"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="CenterContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 20)

[node name="NameLabel" type="Label" parent="CenterContainer"]
layout_mode = 2
text = "Player Name:"

[node name="NameInput" type="LineEdit" parent="CenterContainer"]
layout_mode = 2
placeholder_text = "Enter your name"
max_length = 20

[node name="IPLabel" type="Label" parent="CenterContainer"]
layout_mode = 2
text = "Host IP Address:"

[node name="IPInput" type="LineEdit" parent="CenterContainer"]
layout_mode = 2
text = "127.0.0.1"
placeholder_text = "e.g. 127.0.0.1"

[node name="Spacer2" type="Control" parent="CenterContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 10)

[node name="HostButton" type="Button" parent="CenterContainer"]
layout_mode = 2
text = "Host Game"

[node name="JoinButton" type="Button" parent="CenterContainer"]
layout_mode = 2
text = "Join Game"

[node name="Spacer3" type="Control" parent="CenterContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 10)

[node name="StatusLabel" type="Label" parent="CenterContainer"]
layout_mode = 2
text = ""
horizontal_alignment = 1
autowrap_mode = 2
